--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,8 @@ jobs:
           git reset --hard upstream/master
 
           echo "merge all branches"
-          git branch --all | sed 's/  remotes\///g' | sed 's/\/master//g' | sed 's/\/dev//g' | sed 's/\/HEAD//g' | grep "origin/" | xargs -L1 git merge
+          echo "git branch --all | sed 's/  remotes\///g' | sed 's/\/master//g' | sed 's/\/dev//g' | sed 's/\/HEAD//g' | grep "origin/" | xargs -L1 git merge"
+          git branch --all
 
           echo "force-push all changes to master"
           git push --force
